# ERC2024

./: .gitignore  README.md  manage_services.sh  requirements.txt  rover_source.sh  topics_programas.py
ArucoDetect/: Aruco.py  Aruco_alpha.py
CosasExtra/drone/: README.md
CosasExtra/drone/devel/: .catkin
CosasExtra/drone/devel/share/simulacion/cmake/: simulacionConfig.cmake
_archivado/startup_scripts/: file_receptor.py  ignored_scripts.txt
_archivado/startup_scripts/root_scripts/: devices_setup.sh  jetson_sshx_bot copy.sh  jetson_sshx_bot_v2.sh  jetson_sshx_bot_v4.sh
documentación/: aspectos-programacion.md  normas_código.md
drone/: README.md
drone/simulacion/: README.md
erc_ws/src/Programas/movement/: CMakeLists.txt  package.xml
erc_ws/src/Programas/movement/scripts/: ejemplo.py
erc_ws/src/Programas/movement/src/: keyboard_teleop.cpp
erc_ws/src/drivers/custom_interfaces/: CMakeLists.txt
erc_ws/src/rover_bringup/: CMakeLists.txt  package.xml
erc_ws/src/rover_bringup/launch/: lidar2d.launch.py  logitech_cameras.launch.py  logitech_cameras_advanced.launch.py  realsense_camera.launch.py  realsense_launch.py  rover_bringup.launch.py  ruedas.launch.py  unitree_lidar.launch.py  zed2_motors.launch.py
erc_ws/src/rover_supervisor/: package.xml  setup.cfg  setup.py
erc_ws/src/rover_supervisor/rover_supervisor/: supervisor_node.py  supervisor_node_persistent_terminal.py  supervisor_node_profilebased.py
erc_ws/src/rover_supervisor/rover_supervisor/config/: perfiles_pruebas.py  topics_programas.py
erc_ws/src/sensores_actuadores/realsense_ros/programas_propios/: package.xml  setup.cfg  setup.py
erc_ws/src/sensores_actuadores/realsense_ros/programas_propios/programas_propios/: compressed.py
erc_ws/src/sensores_actuadores/realsense_ros/realsense2_camera/launch/: rs_launch.py
erc_ws/src/sensores_actuadores/realsense_ros/realsense2_camera/src/: realsense_pointcloud2_publisher.py
erc_ws/src/sensores_actuadores/rover_motor_controller/: CMakeLists.txt  package.xml
erc_ws/src/sensores_actuadores/rover_motor_controller/include/: motor_vel_controller.hpp
erc_ws/src/sensores_actuadores/rover_motor_controller/src/: motor_controller.cpp  motor_vel_controller.cpp  zed2_rotation.cpp
erc_ws/src/sensores_actuadores/unitree_lidar_ros2/: CMakeLists.txt
erc_ws/src/sensores_actuadores/unitree_lidar_ros2/include/: unitree_lidar_ros2.h
erc_ws/src/sensores_actuadores/unitree_lidar_ros2/launch/: dondeesta.md  unitree_lidar.launch.py
programas_antiguos/Ejemplos/: aruco_boya.py  camara_calibration.py
programas_antiguos/bringup/src/: lampara.cpp
programas_antiguos/drone/devel/: .rosinstall  local_setup.sh  setup.sh
programas_antiguos/drone/devel/lib/pkgconfig/: simulacion.pc
programas_antiguos/vision/: package.xml
programas_antiguos/vision/launch/: aruco_detector.launch.py  aruco_generate.launch.py
programas_antiguos/vision/vision/: aruco_detector.py  aruco_generate.py  camera_calibraton.py
ros2_ws/src/artificial_vision/: package.xml  setup.cfg  setup.py
ros2_ws/src/artificial_vision/launch/: simple.launch.py
startup_scripts/: devices_setup.sh  ignored_scripts.txt  internet_connection.sh  ip_address.sh  jetson_sshx_bot.sh  start_supervisor.sh  startup_scripts.sh
startup_scripts/root_scripts/: devices_setup.sh  devices_setup_clean.sh
startup_scripts/scripts/: jetson_sshx_bot_v4.sh  start_supervisor.sh  test.sh
startup_scripts/user_scripts/: file_receptor.py  ip_address.sh  jetson_sshx_bot_v4.sh
systemd/: rover-devices-setup.service  rover-file-receptor.service  rover-internet.service  rover-ip.service  rover-ip.timer  rover-sshx.service  rover-supervisor.service
test_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
test_ws/install/movement/lib/movement/: ejemplo
test_ws/install/movement/share/movement/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
test_ws/install/movement/share/movement/cmake/: movementConfig.cmake
test_ws/install/vision/lib/vision/: aruco_detector
test_ws/install/vision/share/vision/: package.sh  package.xml
test_ws/log/: latest_build
test_ws/src/bringup/: CMakeLists.txt  package.xml
test_ws/src/bringup/include/: lampara.h  motor_controller.hpp
test_ws/src/bringup/launch/: bringup_supervisor.launch.py  robot_bringup.launch.py
test_ws/src/bringup/src/: motor_controller.cpp  motor_vel_controller.cpp
test_ws/src/camera_management/: package.xml  setup.cfg  setup.py
test_ws/src/camera_management/launch/: logitech_cameras.launch.py  logitech_test1.launch.py  logitech_test2.launch.py
test_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
test_ws/src/custom_interfaces/srv/: GetPosition.srv  GetVelocity.srv
test_ws/src/drone/src/simulacion/: CMakeLists.txt  README.md
test_ws/src/dynamixel_sdk/: package.xml
test_ws/src/movement/: CMakeLists.txt  package.xml
test_ws/src/movement/src/: ejemplo.cpp  keyboard_teleop.cpp  subscriber_member_function.cpp
test_ws/src/supervisor_package/: package.xml  setup.cfg  setup.py
test_ws/src/supervisor_package/supervisor_package/: supervisor_node.py
test_ws/src/supervisor_package/supervisor_package/config/: topics_programas.py
test_ws/src/vision/: setup.py
test_ws/src/vision/launch/: aruco_detector.launch.py
test_ws/src/vision/vision/: aruco_detector.py  aruco_generate.py  aruco_orientation.py
utilidades/: start_supervisor.sh
utilidades/_archivado/: jetson_sshx_bot.sh  jetson_sshx_bot_v3.sh  jetson_sshx_bot_v4.sh
(+1 files in other folders)
